<resources>
    <string name="app_name">KulinerIn</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="foods">Foods</string>
    <string name="resturant">Restaurant</string>
    <string name="resturants">Restaurants</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="coming_soon">This Feature is Coming Soon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="dummy_email">johndoe@example.com</string>
    <string name="name">Name</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_password">johndoe123</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="food_name">Nama Makanan</string>
    <string name="food_origin">Asal Makanan\n</string>
    <string name="food_description">Deskripsi Makanan</string>
    <string name="welcome_for_user">Welcome,</string>
    <string name="kulinerian">Kulinerian!</string>
    <string name="food_image">Food Image</string>
    <string name="food_image_description">Food image.</string>
    <string name="food_region">Asal Daerah</string>
    <string name="gallery_button">Gallery Button</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="error_invalid_email">Please input a valid email address</string>
    <string name="error_invalid_name">Please input a valid name</string>
    <string name="error_password_to_short">Password is less than 8 characters</string>
    <string name="go_to_register">Don\'t have an account? Let\'s register</string>
    <string name="hello_user">Hello, User</string>
    <string name="search_foods_by_name">Search foods by name...</string>
    <string name="_00_30">00:30</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="loading_text">Analyzing image, please wait a moment</string>
</resources>