<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResultActivity">

    <!-- TODO: Buat back button, Put. -->

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/food_image_description"
        app:srcCompat="@drawable/ic_place_holder"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_food_name"
        style="@style/SubtitleStyle"
        android:layout_width="420dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/food_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_result" />

    <TextView
        android:id="@+id/tv_food_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/WelcomeStyle"
        android:text="@string/food_region"
        app:layout_constraintTop_toBottomOf="@id/tv_food_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/tv_food_description"
        style="@style/CaptionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/food_description"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_food_region"
        app:layout_constraintTop_toBottomOf="@id/tv_food_region"
        android:background="@color/background_blue"
        android:padding="8dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>